--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
     <!-- Kategori buttons -->
 <div class="category-container">
-    <button class="category-btn" onclick="goToPage('UPDATE/CODE PULSA/list-pulsa.html')">Pulsa All Operator</button>
+    <button class="category-btn" onclick="goToPage('UPDATE/CODE PULSA/list-pulsa.html')">Pulsa All Operator/Token PLN</button>
     <button class="category-btn" onclick="goToPage('UPDATE/CODE WALLET/liste-wallet.html')">Top Up E-Wallet</button>
 
 </div>
