--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 }
 
 .category-btn {
-    background-color: #0000ff;
+    background-color: #086fff;
     color: white;
     padding: 12px 24px;
     margin: 8px;
@@ -217,7 +217,7 @@
         
     /* Running text style */
     .running-text {
-        background-color: #0000ff; /* Blue background */
+        background-color: #086fff; /* Blue background */
         color: #fff; /* Black text */
         padding: 10px;
         text-align: center;
@@ -273,8 +273,7 @@
 <body>
 <nav>
     <div class="brand">
-        <h1>KEVV STORE</h1>
-    
+        <h1>KEVV' STORE</h1>
     </div>
 </nav>
 <!-- Banner image -->
@@ -283,7 +282,7 @@
 </div>
         <!-- Running text -->
     <div class="running-text">
-        <marquee behavior="scroll" direction="left">Selamat datang di KEVV STORE!. Jasa Top-up Game Yang Aman, Murah, dan Terpercaya. Nikmati promo menarik untuk game favorit Anda.</marquee>
+        <marquee behavior="scroll" direction="left">Selamat datang di KEVV' STORE!. Jasa Top-up Game Yang Aman, Murah, dan Terpercaya. Nikmati promo menarik untuk game favorit Anda.</marquee>
     </div>
 
     <div class="search-container">
@@ -373,7 +372,7 @@
     </div>
 
     <footer>
-        ©2024 KEVV STORE™.
+        ©2024 KEVV' STORE™.
     </footer>
 
 
