--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         <img src="slider1.jpg" alt="Slide 1" class="slide active">
         <img src="slider2.jpg" alt="Slide 2" class="slide">
         <img src="slider3.jpg" alt="Slide 3" class="slide">
+        <img src="slider4.jpg" alt="Slide 4" class="slide">
     </div>
 </div>
 <!-- Running Text -->
