--- a/index.html
+++ b/index.html
@@ -186,19 +186,22 @@
         <img src="slider1.jpg" alt="Slide 1" class="slide active">
         <img src="slider2.jpg" alt="Slide 2" class="slide">
         <img src="slider3.jpg" alt="Slide 3" class="slide">
-        <img src="slider4.jpg" alt="Slide 4" class="slide">
     </div>
 </div>
 <!-- Running Text -->
 <marquee behavior="scroll" direction="left" >KEVV' STORE Jasa Top-up Game Yang Aman, Murah, dan Terpercaya.</marquee>
 
 <div class="search-container">
-    <input type="text" id="search" placeholder="Cari berdasarkan nama game...">
+    <input type="text" id="search" placeholder="Mau Cari Apa Di Kevv' Store">
 </div>
     <div class="grid-container" id="gameGrid">
       <div class="grid-item">
             <a href="UPDATE/CODE PULSA/pln.html"><img src="UPDATE/CODE PULSA/pln.jpg" alt="Mobile Legends"></a>
             <h3>Token PLN</h3>
+        </div>
+              <div class="grid-item">
+            <a href="UPDATE/CODE KUOTA/proses.html"><img src="UPDATE/CODE KUOTA/img.jpg" alt="Mobile Legends"></a>
+            <h3>Paket Data</h3>
         </div>
         <div class="grid-item">
             <a href="UPDATE/CODE PULSA/list-pulsa.html"><img src="UPDATE/CODE PULSA/all.jpg" alt="list-pulsa.html"></a>
@@ -208,6 +211,7 @@
             <a href="UPDATE/CODE WALLET/liste-wallet.html"><img src="UPDATE/CODE WALLET/img.jpg" alt="Mobile Legends"></a>
             <h3>E-Wallet</h3>
         </div>
+        
         <div class="grid-item">
             <a href="mlbb.html"><img src="ml.jpeg" alt="Mobile Legends"></a>
             <h3>Mobile Legends</h3>
